<resources>
    <string name="app_name">MusicMafia</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Event Name</string>
    <string name="prompt_password">Event Password</string>
    <string name="action_sign_in">Validate Credentials</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_eventName">This Event ID has whitespace</string>
    <string name="error_invalid_password">This password has whitespace</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_guest">Guest</string>
    <string name="prompt_host">Host</string>
    <string name="up_vote_button">Up Vote Button</string>
    <string name="add_song_button">Add Song Button</string>
    <string name="down_vote_button">Down Vote Button</string>
    <string name="song_name">Song Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="number_up_votes">Number of Up Votes</string>
    <string name="app_label">Music Mafia</string>
    <string name="search_hint">Search for song</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>
    <string name="no_song_playing">No song playing</string>
    <string name="music_player">Music Player</string>
    <string name="below_music_player">Currently Playing</string>
</resources>
