<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".activities.PlaylistMakingActivity">

    <TextView
        android:text="@string/music_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/music_player"
        android:textSize="33sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/spotifyGreen"
        android:layout_marginBottom="10dp"/>

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/music_player"
        android:layout_centerHorizontal="true"
        android:layout_gravity="start"
        android:layout_above="@+id/song_name"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/backButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:id="@+id/playPause"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:id="@+id/skipSong"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/playPause" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_alignLeft="@+id/music_player"
        android:layout_alignStart="@+id/music_player"
        android:layout_alignRight="@+id/music_player"
        android:layout_alignEnd="@+id/music_player"
        android:layout_above="@+id/playPause"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text=""
        android:id="@+id/current_time"
        android:layout_above="@+id/seekBar"
        android:layout_toLeftOf="@+id/music_player"
        android:layout_toStartOf="@+id/music_player"
        android:textColor="@color/offWhite" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text=""
        android:id="@+id/final_time"
        android:layout_above="@+id/seekBar"
        android:layout_alignRight="@+id/skipSong"
        android:layout_alignEnd="@+id/skipSong"
        android:textColor="@color/offWhite" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:lines="1"
        android:maxLines="1"
        android:ellipsize="marquee"
        android:id="@+id/song_name"
        android:layout_above="@id/current_time"
        android:layout_centerHorizontal="true"
        android:textColor="@color/offWhite"
        android:layout_marginTop="20dp" />

</RelativeLayout>